# product_service

./: pyproject.toml
product_service/: config.py  db.py  main.py  model.py  schema.py
